infrastructure/directory/lldap/exposure/ingressroute.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lldap-ui
  namespace: controller-directory
  annotations:
    external-dns.alpha.kubernetes.io/hostname: directory.internal.${domain_prefix}${project}.${domain}
    external-dns.alpha.kubernetes.io/target: internal.${domain_prefix}${project}.${domain}
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  entryPoints:
    - internal
  routes:
    - match: Host(`directory.internal.${domain_prefix}${project}.${domain}`)
      kind: Rule
      # middlewares:
      #   - name: tailnet-only
      #     namespace: controller-ingress
      services:
        - name: lldap
          port: 17170
  tls:
    secretName: wildcard.${domain_prefix}${project}.${domain}.tls
